// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectScreen /> should handle "displayItem" prop 1`] = `
<SelectScreen
  displayItem={[Function]}
  isItemSelected={[Function]}
  items={
    Array [
      Object {
        "name": "Российский рубль",
        "shortName": "RUB",
      },
      Object {
        "name": "Американский доллар",
        "shortName": "USD",
      },
      Object {
        "name": "Единая европейская валюта",
        "shortName": "EUR",
      },
      Object {
        "name": "Белорусский рубль",
        "shortName": "BYN",
      },
      Object {
        "name": "Украинская гривна",
        "shortName": "UAH",
      },
      Object {
        "name": "Казахстанский тенге",
        "shortName": "KZT",
      },
    ]
  }
  title="Валюта"
>
  <Screen
    title="Валюта"
    withDivideHeader={false}
  >
    <Layer>
      <Portal
        containerInfo={
          <div>
            <div
              class="screen full-width"
            >
              <div
                class="nav-bar"
              >
                <div
                  class="button-groups"
                >
                  <div
                    class="group"
                  >
                    <button
                      aria-hidden="true"
                      aria-label="Закрыть Валюта"
                      class="button icon stub"
                      type="button"
                    />
                  </div>
                </div>
                <div
                  class="main"
                >
                  <div
                    class="title truncate"
                  >
                    Валюта
                  </div>
                </div>
                <div
                  class="button-groups end"
                >
                  <div
                    class="group"
                  >
                    <button
                      aria-hidden="false"
                      aria-label="Закрыть Валюта"
                      class="button icon"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        fill="#212121"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M4.293 19.707a1 1 0 001.414 0L12 13.414l6.293 6.293a1 1 0 001.414-1.414L13.414 12l6.293-6.293a1 1 0 00-1.414-1.414L12 10.586 5.707 4.293a1 1 0 00-1.414 1.414L10.586 12l-6.293 6.293a1 1 0 000 1.414z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="content full-width"
              >
                <div
                  class="layout mobile disabled-mxs disabled-ms"
                >
                  <div
                    class="container"
                  >
                    <button
                      class="item"
                    >
                      <div
                        class="item is-selected"
                      >
                        Российский рубль
                         (
                        RUB
                        )
                      </div>
                      <svg
                        fill="#212121"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M8.971 16.557L20.265 4.322a1 1 0 011.47 1.356l-12 13a1 1 0 01-1.442.03l-4-4a1 1 0 111.414-1.415l3.264 3.264z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </button>
                    <button
                      class="item"
                    >
                      <div
                        class="item"
                      >
                        Американский доллар
                         (
                        USD
                        )
                      </div>
                    </button>
                    <button
                      class="item"
                    >
                      <div
                        class="item"
                      >
                        Единая европейская валюта
                         (
                        EUR
                        )
                      </div>
                    </button>
                    <button
                      class="item"
                    >
                      <div
                        class="item"
                      >
                        Белорусский рубль
                         (
                        BYN
                        )
                      </div>
                    </button>
                    <button
                      class="item"
                    >
                      <div
                        class="item"
                      >
                        Украинская гривна
                         (
                        UAH
                        )
                      </div>
                    </button>
                    <button
                      class="item"
                    >
                      <div
                        class="item"
                      >
                        Казахстанский тенге
                         (
                        KZT
                        )
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        }
      >
        <div
          className="screen full-width"
        >
          <ScreenLayout
            childrenRef={[Function]}
            fullScrollThreshold={320}
            onBack={[Function]}
            onClose={[Function]}
            title="Валюта"
            withBackButton={false}
            withCloseButton={true}
            withDivideHeader={false}
            withHeader={true}
          >
            <NavBar
              bottomBordered={false}
              buttons={
                Object {
                  "end": Object {
                    "aria-label": "Закрыть Валюта",
                    "icon": [Function],
                    "onClick": [Function],
                  },
                  "start": undefined,
                }
              }
              title="Валюта"
            >
              <div
                className="nav-bar"
              >
                <div
                  className="button-groups"
                >
                  <div
                    className="group"
                  >
                    <NavButton
                      aria-label="Закрыть Валюта"
                      icon={[Function]}
                      onClick={[Function]}
                      stub={true}
                    >
                      <button
                        aria-hidden={true}
                        aria-label="Закрыть Валюта"
                        className="button icon stub"
                        onClick={[Function]}
                        type="button"
                      />
                    </NavButton>
                  </div>
                </div>
                <div
                  className="main"
                >
                  <div
                    className="title truncate"
                  >
                    Валюта
                  </div>
                </div>
                <div
                  className="button-groups end"
                >
                  <div
                    className="group"
                  >
                    <NavButton
                      aria-label="Закрыть Валюта"
                      icon={[Function]}
                      onClick={[Function]}
                    >
                      <button
                        aria-hidden={false}
                        aria-label="Закрыть Валюта"
                        className="button icon"
                        onClick={[Function]}
                        type="button"
                      >
                        <CrossSVG
                          aria-hidden="true"
                          fill="#212121"
                        >
                          <svg
                            aria-hidden="true"
                            fill="#212121"
                            height={24}
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <path
                              clipRule="evenodd"
                              d="M4.293 19.707a1 1 0 001.414 0L12 13.414l6.293 6.293a1 1 0 001.414-1.414L13.414 12l6.293-6.293a1 1 0 00-1.414-1.414L12 10.586 5.707 4.293a1 1 0 00-1.414 1.414L10.586 12l-6.293 6.293a1 1 0 000 1.414z"
                              fillRule="evenodd"
                            />
                          </svg>
                        </CrossSVG>
                      </button>
                    </NavButton>
                  </div>
                </div>
              </div>
            </NavBar>
            <div
              className="content full-width"
            >
              <MobileLayout
                disabledOn={
                  Array [
                    "mxs",
                    "ms",
                  ]
                }
              >
                <div
                  className="layout mobile disabled-mxs disabled-ms"
                >
                  <div
                    className="container"
                  >
                    <button
                      className="item"
                      key="0"
                      onClick={[Function]}
                    >
                      <div
                        className="item is-selected"
                      >
                        Российский рубль
                         (
                        RUB
                        )
                      </div>
                      <CheckSVG
                        fill="#212121"
                      >
                        <svg
                          fill="#212121"
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            clipRule="evenodd"
                            d="M8.971 16.557L20.265 4.322a1 1 0 011.47 1.356l-12 13a1 1 0 01-1.442.03l-4-4a1 1 0 111.414-1.415l3.264 3.264z"
                            fillRule="evenodd"
                          />
                        </svg>
                      </CheckSVG>
                    </button>
                    <button
                      className="item"
                      key="1"
                      onClick={[Function]}
                    >
                      <div
                        className="item"
                      >
                        Американский доллар
                         (
                        USD
                        )
                      </div>
                    </button>
                    <button
                      className="item"
                      key="2"
                      onClick={[Function]}
                    >
                      <div
                        className="item"
                      >
                        Единая европейская валюта
                         (
                        EUR
                        )
                      </div>
                    </button>
                    <button
                      className="item"
                      key="3"
                      onClick={[Function]}
                    >
                      <div
                        className="item"
                      >
                        Белорусский рубль
                         (
                        BYN
                        )
                      </div>
                    </button>
                    <button
                      className="item"
                      key="4"
                      onClick={[Function]}
                    >
                      <div
                        className="item"
                      >
                        Украинская гривна
                         (
                        UAH
                        )
                      </div>
                    </button>
                    <button
                      className="item"
                      key="5"
                      onClick={[Function]}
                    >
                      <div
                        className="item"
                      >
                        Казахстанский тенге
                         (
                        KZT
                        )
                      </div>
                    </button>
                  </div>
                </div>
              </MobileLayout>
            </div>
          </ScreenLayout>
        </div>
      </Portal>
    </Layer>
  </Screen>
</SelectScreen>
`;

exports[`<SelectScreen /> should handle miss "getItemName" prop 1`] = `
<SelectScreen
  items={
    Array [
      Object {
        "name": "Российский рубль",
      },
      Object {
        "name": "Американский доллар",
      },
      Object {
        "name": "Единая европейская валюта",
      },
      Object {
        "name": "Белорусский рубль",
      },
      Object {
        "name": "Украинская гривна",
      },
      Object {
        "name": "Казахстанский тенге",
      },
    ]
  }
  title="Валюта"
>
  <Screen
    title="Валюта"
    withDivideHeader={false}
  >
    <Layer>
      <Portal
        containerInfo={
          <div>
            <div
              class="screen full-width"
            >
              <div
                class="nav-bar"
              >
                <div
                  class="button-groups"
                >
                  <div
                    class="group"
                  >
                    <button
                      aria-hidden="true"
                      aria-label="Закрыть Валюта"
                      class="button icon stub"
                      type="button"
                    />
                  </div>
                </div>
                <div
                  class="main"
                >
                  <div
                    class="title truncate"
                  >
                    Валюта
                  </div>
                </div>
                <div
                  class="button-groups end"
                >
                  <div
                    class="group"
                  >
                    <button
                      aria-hidden="false"
                      aria-label="Закрыть Валюта"
                      class="button icon"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        fill="#212121"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M4.293 19.707a1 1 0 001.414 0L12 13.414l6.293 6.293a1 1 0 001.414-1.414L13.414 12l6.293-6.293a1 1 0 00-1.414-1.414L12 10.586 5.707 4.293a1 1 0 00-1.414 1.414L10.586 12l-6.293 6.293a1 1 0 000 1.414z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="content full-width"
              >
                <div
                  class="layout mobile disabled-mxs disabled-ms"
                >
                  <div
                    class="container"
                  >
                    <button
                      class="item"
                    >
                      <span
                        class="size-16 line-height-24 color__gray87"
                      >
                        Российский рубль
                      </span>
                    </button>
                    <button
                      class="item"
                    >
                      <span
                        class="size-16 line-height-24 color__gray87"
                      >
                        Американский доллар
                      </span>
                    </button>
                    <button
                      class="item"
                    >
                      <span
                        class="size-16 line-height-24 color__gray87"
                      >
                        Единая европейская валюта
                      </span>
                    </button>
                    <button
                      class="item"
                    >
                      <span
                        class="size-16 line-height-24 color__gray87"
                      >
                        Белорусский рубль
                      </span>
                    </button>
                    <button
                      class="item"
                    >
                      <span
                        class="size-16 line-height-24 color__gray87"
                      >
                        Украинская гривна
                      </span>
                    </button>
                    <button
                      class="item"
                    >
                      <span
                        class="size-16 line-height-24 color__gray87"
                      >
                        Казахстанский тенге
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        }
      >
        <div
          className="screen full-width"
        >
          <ScreenLayout
            childrenRef={[Function]}
            fullScrollThreshold={320}
            onBack={[Function]}
            onClose={[Function]}
            title="Валюта"
            withBackButton={false}
            withCloseButton={true}
            withDivideHeader={false}
            withHeader={true}
          >
            <NavBar
              bottomBordered={false}
              buttons={
                Object {
                  "end": Object {
                    "aria-label": "Закрыть Валюта",
                    "icon": [Function],
                    "onClick": [Function],
                  },
                  "start": undefined,
                }
              }
              title="Валюта"
            >
              <div
                className="nav-bar"
              >
                <div
                  className="button-groups"
                >
                  <div
                    className="group"
                  >
                    <NavButton
                      aria-label="Закрыть Валюта"
                      icon={[Function]}
                      onClick={[Function]}
                      stub={true}
                    >
                      <button
                        aria-hidden={true}
                        aria-label="Закрыть Валюта"
                        className="button icon stub"
                        onClick={[Function]}
                        type="button"
                      />
                    </NavButton>
                  </div>
                </div>
                <div
                  className="main"
                >
                  <div
                    className="title truncate"
                  >
                    Валюта
                  </div>
                </div>
                <div
                  className="button-groups end"
                >
                  <div
                    className="group"
                  >
                    <NavButton
                      aria-label="Закрыть Валюта"
                      icon={[Function]}
                      onClick={[Function]}
                    >
                      <button
                        aria-hidden={false}
                        aria-label="Закрыть Валюта"
                        className="button icon"
                        onClick={[Function]}
                        type="button"
                      >
                        <CrossSVG
                          aria-hidden="true"
                          fill="#212121"
                        >
                          <svg
                            aria-hidden="true"
                            fill="#212121"
                            height={24}
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <path
                              clipRule="evenodd"
                              d="M4.293 19.707a1 1 0 001.414 0L12 13.414l6.293 6.293a1 1 0 001.414-1.414L13.414 12l6.293-6.293a1 1 0 00-1.414-1.414L12 10.586 5.707 4.293a1 1 0 00-1.414 1.414L10.586 12l-6.293 6.293a1 1 0 000 1.414z"
                              fillRule="evenodd"
                            />
                          </svg>
                        </CrossSVG>
                      </button>
                    </NavButton>
                  </div>
                </div>
              </div>
            </NavBar>
            <div
              className="content full-width"
            >
              <MobileLayout
                disabledOn={
                  Array [
                    "mxs",
                    "ms",
                  ]
                }
              >
                <div
                  className="layout mobile disabled-mxs disabled-ms"
                >
                  <div
                    className="container"
                  >
                    <button
                      className="item"
                      key="0"
                      onClick={[Function]}
                    >
                      <ForwardRef(Text)
                        color="gray87"
                        lineHeight={24}
                        size={16}
                      >
                        <span
                          className="size-16 line-height-24 color__gray87"
                        >
                          Российский рубль
                        </span>
                      </ForwardRef(Text)>
                    </button>
                    <button
                      className="item"
                      key="1"
                      onClick={[Function]}
                    >
                      <ForwardRef(Text)
                        color="gray87"
                        lineHeight={24}
                        size={16}
                      >
                        <span
                          className="size-16 line-height-24 color__gray87"
                        >
                          Американский доллар
                        </span>
                      </ForwardRef(Text)>
                    </button>
                    <button
                      className="item"
                      key="2"
                      onClick={[Function]}
                    >
                      <ForwardRef(Text)
                        color="gray87"
                        lineHeight={24}
                        size={16}
                      >
                        <span
                          className="size-16 line-height-24 color__gray87"
                        >
                          Единая европейская валюта
                        </span>
                      </ForwardRef(Text)>
                    </button>
                    <button
                      className="item"
                      key="3"
                      onClick={[Function]}
                    >
                      <ForwardRef(Text)
                        color="gray87"
                        lineHeight={24}
                        size={16}
                      >
                        <span
                          className="size-16 line-height-24 color__gray87"
                        >
                          Белорусский рубль
                        </span>
                      </ForwardRef(Text)>
                    </button>
                    <button
                      className="item"
                      key="4"
                      onClick={[Function]}
                    >
                      <ForwardRef(Text)
                        color="gray87"
                        lineHeight={24}
                        size={16}
                      >
                        <span
                          className="size-16 line-height-24 color__gray87"
                        >
                          Украинская гривна
                        </span>
                      </ForwardRef(Text)>
                    </button>
                    <button
                      className="item"
                      key="5"
                      onClick={[Function]}
                    >
                      <ForwardRef(Text)
                        color="gray87"
                        lineHeight={24}
                        size={16}
                      >
                        <span
                          className="size-16 line-height-24 color__gray87"
                        >
                          Казахстанский тенге
                        </span>
                      </ForwardRef(Text)>
                    </button>
                  </div>
                </div>
              </MobileLayout>
            </div>
          </ScreenLayout>
        </div>
      </Portal>
    </Layer>
  </Screen>
</SelectScreen>
`;

exports[`<SelectScreen /> should handle props 1`] = `
<SelectScreen
  getItemName={[Function]}
  isItemSelected={[Function]}
  items={
    Array [
      "Верх-Исетский",
      "Чкаловский",
      "Железнодорожный",
      "Кировский",
      "Орджоникидзевский",
      "Октябрьский",
      "Ленинский",
    ]
  }
  onItemClick={[MockFunction]}
  title="Районы"
>
  <Screen
    title="Районы"
    withDivideHeader={false}
  >
    <Layer>
      <Portal
        containerInfo={
          <div>
            <div
              class="screen full-width"
            >
              <div
                class="nav-bar"
              >
                <div
                  class="button-groups"
                >
                  <div
                    class="group"
                  >
                    <button
                      aria-hidden="true"
                      aria-label="Закрыть Районы"
                      class="button icon stub"
                      type="button"
                    />
                  </div>
                </div>
                <div
                  class="main"
                >
                  <div
                    class="title truncate"
                  >
                    Районы
                  </div>
                </div>
                <div
                  class="button-groups end"
                >
                  <div
                    class="group"
                  >
                    <button
                      aria-hidden="false"
                      aria-label="Закрыть Районы"
                      class="button icon"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        fill="#212121"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M4.293 19.707a1 1 0 001.414 0L12 13.414l6.293 6.293a1 1 0 001.414-1.414L13.414 12l6.293-6.293a1 1 0 00-1.414-1.414L12 10.586 5.707 4.293a1 1 0 00-1.414 1.414L10.586 12l-6.293 6.293a1 1 0 000 1.414z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="content full-width"
              >
                <div
                  class="layout mobile disabled-mxs disabled-ms"
                >
                  <div
                    class="container"
                  >
                    <button
                      class="item"
                    >
                      <span
                        class="size-16 line-height-24 color__gray87"
                      >
                        Верх-Исетский
                      </span>
                    </button>
                    <button
                      class="item"
                    >
                      <span
                        class="size-16 line-height-24 color__gray87"
                      >
                        Чкаловский
                      </span>
                    </button>
                    <button
                      class="item"
                    >
                      <span
                        class="size-16 line-height-24 color__gray87"
                      >
                        Железнодорожный
                      </span>
                    </button>
                    <button
                      class="item"
                    >
                      <span
                        class="size-16 line-height-24 color__gray87"
                      >
                        Кировский
                      </span>
                      <svg
                        fill="#212121"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M8.971 16.557L20.265 4.322a1 1 0 011.47 1.356l-12 13a1 1 0 01-1.442.03l-4-4a1 1 0 111.414-1.415l3.264 3.264z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </button>
                    <button
                      class="item"
                    >
                      <span
                        class="size-16 line-height-24 color__gray87"
                      >
                        Орджоникидзевский
                      </span>
                    </button>
                    <button
                      class="item"
                    >
                      <span
                        class="size-16 line-height-24 color__gray87"
                      >
                        Октябрьский
                      </span>
                    </button>
                    <button
                      class="item"
                    >
                      <span
                        class="size-16 line-height-24 color__gray87"
                      >
                        Ленинский
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        }
      >
        <div
          className="screen full-width"
        >
          <ScreenLayout
            childrenRef={[Function]}
            fullScrollThreshold={320}
            onBack={[Function]}
            onClose={[Function]}
            title="Районы"
            withBackButton={false}
            withCloseButton={true}
            withDivideHeader={false}
            withHeader={true}
          >
            <NavBar
              bottomBordered={false}
              buttons={
                Object {
                  "end": Object {
                    "aria-label": "Закрыть Районы",
                    "icon": [Function],
                    "onClick": [Function],
                  },
                  "start": undefined,
                }
              }
              title="Районы"
            >
              <div
                className="nav-bar"
              >
                <div
                  className="button-groups"
                >
                  <div
                    className="group"
                  >
                    <NavButton
                      aria-label="Закрыть Районы"
                      icon={[Function]}
                      onClick={[Function]}
                      stub={true}
                    >
                      <button
                        aria-hidden={true}
                        aria-label="Закрыть Районы"
                        className="button icon stub"
                        onClick={[Function]}
                        type="button"
                      />
                    </NavButton>
                  </div>
                </div>
                <div
                  className="main"
                >
                  <div
                    className="title truncate"
                  >
                    Районы
                  </div>
                </div>
                <div
                  className="button-groups end"
                >
                  <div
                    className="group"
                  >
                    <NavButton
                      aria-label="Закрыть Районы"
                      icon={[Function]}
                      onClick={[Function]}
                    >
                      <button
                        aria-hidden={false}
                        aria-label="Закрыть Районы"
                        className="button icon"
                        onClick={[Function]}
                        type="button"
                      >
                        <CrossSVG
                          aria-hidden="true"
                          fill="#212121"
                        >
                          <svg
                            aria-hidden="true"
                            fill="#212121"
                            height={24}
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <path
                              clipRule="evenodd"
                              d="M4.293 19.707a1 1 0 001.414 0L12 13.414l6.293 6.293a1 1 0 001.414-1.414L13.414 12l6.293-6.293a1 1 0 00-1.414-1.414L12 10.586 5.707 4.293a1 1 0 00-1.414 1.414L10.586 12l-6.293 6.293a1 1 0 000 1.414z"
                              fillRule="evenodd"
                            />
                          </svg>
                        </CrossSVG>
                      </button>
                    </NavButton>
                  </div>
                </div>
              </div>
            </NavBar>
            <div
              className="content full-width"
            >
              <MobileLayout
                disabledOn={
                  Array [
                    "mxs",
                    "ms",
                  ]
                }
              >
                <div
                  className="layout mobile disabled-mxs disabled-ms"
                >
                  <div
                    className="container"
                  >
                    <button
                      className="item"
                      key="0"
                      onClick={[Function]}
                    >
                      <ForwardRef(Text)
                        color="gray87"
                        lineHeight={24}
                        size={16}
                      >
                        <span
                          className="size-16 line-height-24 color__gray87"
                        >
                          Верх-Исетский
                        </span>
                      </ForwardRef(Text)>
                    </button>
                    <button
                      className="item"
                      key="1"
                      onClick={[Function]}
                    >
                      <ForwardRef(Text)
                        color="gray87"
                        lineHeight={24}
                        size={16}
                      >
                        <span
                          className="size-16 line-height-24 color__gray87"
                        >
                          Чкаловский
                        </span>
                      </ForwardRef(Text)>
                    </button>
                    <button
                      className="item"
                      key="2"
                      onClick={[Function]}
                    >
                      <ForwardRef(Text)
                        color="gray87"
                        lineHeight={24}
                        size={16}
                      >
                        <span
                          className="size-16 line-height-24 color__gray87"
                        >
                          Железнодорожный
                        </span>
                      </ForwardRef(Text)>
                    </button>
                    <button
                      className="item"
                      key="3"
                      onClick={[Function]}
                    >
                      <ForwardRef(Text)
                        color="gray87"
                        lineHeight={24}
                        size={16}
                      >
                        <span
                          className="size-16 line-height-24 color__gray87"
                        >
                          Кировский
                        </span>
                      </ForwardRef(Text)>
                      <CheckSVG
                        fill="#212121"
                      >
                        <svg
                          fill="#212121"
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            clipRule="evenodd"
                            d="M8.971 16.557L20.265 4.322a1 1 0 011.47 1.356l-12 13a1 1 0 01-1.442.03l-4-4a1 1 0 111.414-1.415l3.264 3.264z"
                            fillRule="evenodd"
                          />
                        </svg>
                      </CheckSVG>
                    </button>
                    <button
                      className="item"
                      key="4"
                      onClick={[Function]}
                    >
                      <ForwardRef(Text)
                        color="gray87"
                        lineHeight={24}
                        size={16}
                      >
                        <span
                          className="size-16 line-height-24 color__gray87"
                        >
                          Орджоникидзевский
                        </span>
                      </ForwardRef(Text)>
                    </button>
                    <button
                      className="item"
                      key="5"
                      onClick={[Function]}
                    >
                      <ForwardRef(Text)
                        color="gray87"
                        lineHeight={24}
                        size={16}
                      >
                        <span
                          className="size-16 line-height-24 color__gray87"
                        >
                          Октябрьский
                        </span>
                      </ForwardRef(Text)>
                    </button>
                    <button
                      className="item"
                      key="6"
                      onClick={[Function]}
                    >
                      <ForwardRef(Text)
                        color="gray87"
                        lineHeight={24}
                        size={16}
                      >
                        <span
                          className="size-16 line-height-24 color__gray87"
                        >
                          Ленинский
                        </span>
                      </ForwardRef(Text)>
                    </button>
                  </div>
                </div>
              </MobileLayout>
            </div>
          </ScreenLayout>
        </div>
      </Portal>
    </Layer>
  </Screen>
</SelectScreen>
`;

exports[`<SelectScreen /> should render without props 1`] = `
<SelectScreen>
  <Screen
    withDivideHeader={false}
  >
    <Layer>
      <Portal
        containerInfo={
          <div>
            <div
              class="screen full-width"
            >
              <div
                class="nav-bar"
              >
                <div
                  class="button-groups"
                >
                  <div
                    class="group"
                  >
                    <button
                      aria-hidden="true"
                      aria-label="Закрыть"
                      class="button icon stub"
                      type="button"
                    />
                  </div>
                </div>
                <div
                  class="main"
                />
                <div
                  class="button-groups end"
                >
                  <div
                    class="group"
                  >
                    <button
                      aria-hidden="false"
                      aria-label="Закрыть"
                      class="button icon"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        fill="#212121"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M4.293 19.707a1 1 0 001.414 0L12 13.414l6.293 6.293a1 1 0 001.414-1.414L13.414 12l6.293-6.293a1 1 0 00-1.414-1.414L12 10.586 5.707 4.293a1 1 0 00-1.414 1.414L10.586 12l-6.293 6.293a1 1 0 000 1.414z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="content full-width"
              >
                <div
                  class="layout mobile disabled-mxs disabled-ms"
                >
                  <div
                    class="container"
                  />
                </div>
              </div>
            </div>
          </div>
        }
      >
        <div
          className="screen full-width"
        >
          <ScreenLayout
            childrenRef={[Function]}
            fullScrollThreshold={320}
            onBack={[Function]}
            onClose={[Function]}
            withBackButton={false}
            withCloseButton={true}
            withDivideHeader={false}
            withHeader={true}
          >
            <NavBar
              bottomBordered={false}
              buttons={
                Object {
                  "end": Object {
                    "aria-label": "Закрыть",
                    "icon": [Function],
                    "onClick": [Function],
                  },
                  "start": undefined,
                }
              }
            >
              <div
                className="nav-bar"
              >
                <div
                  className="button-groups"
                >
                  <div
                    className="group"
                  >
                    <NavButton
                      aria-label="Закрыть"
                      icon={[Function]}
                      onClick={[Function]}
                      stub={true}
                    >
                      <button
                        aria-hidden={true}
                        aria-label="Закрыть"
                        className="button icon stub"
                        onClick={[Function]}
                        type="button"
                      />
                    </NavButton>
                  </div>
                </div>
                <div
                  className="main"
                />
                <div
                  className="button-groups end"
                >
                  <div
                    className="group"
                  >
                    <NavButton
                      aria-label="Закрыть"
                      icon={[Function]}
                      onClick={[Function]}
                    >
                      <button
                        aria-hidden={false}
                        aria-label="Закрыть"
                        className="button icon"
                        onClick={[Function]}
                        type="button"
                      >
                        <CrossSVG
                          aria-hidden="true"
                          fill="#212121"
                        >
                          <svg
                            aria-hidden="true"
                            fill="#212121"
                            height={24}
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <path
                              clipRule="evenodd"
                              d="M4.293 19.707a1 1 0 001.414 0L12 13.414l6.293 6.293a1 1 0 001.414-1.414L13.414 12l6.293-6.293a1 1 0 00-1.414-1.414L12 10.586 5.707 4.293a1 1 0 00-1.414 1.414L10.586 12l-6.293 6.293a1 1 0 000 1.414z"
                              fillRule="evenodd"
                            />
                          </svg>
                        </CrossSVG>
                      </button>
                    </NavButton>
                  </div>
                </div>
              </div>
            </NavBar>
            <div
              className="content full-width"
            >
              <MobileLayout
                disabledOn={
                  Array [
                    "mxs",
                    "ms",
                  ]
                }
              >
                <div
                  className="layout mobile disabled-mxs disabled-ms"
                >
                  <div
                    className="container"
                  />
                </div>
              </MobileLayout>
            </div>
          </ScreenLayout>
        </div>
      </Portal>
    </Layer>
  </Screen>
</SelectScreen>
`;
